[package]
name = "resead-rs"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "An implementation of the reverse engineered Nintendo's SEAD library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
